// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Suggester > renders empty if request fails 1`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-outlined ant-select-auto-complete css-dev-only-do-not-override-mncuj7 ant-select-single ant-select-show-search"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-wrap"
        >
          <span
            class="ant-select-selection-search"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="ant-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              type="search"
              value="test"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Suggester > renders results with custom result template 1`] = `
<body>
  <div>
    <div
      class="ant-select ant-select-outlined ant-select-auto-complete css-dev-only-do-not-override-mncuj7 ant-select-single ant-select-open ant-select-show-search"
    >
      <div
        class="ant-select-selector"
      >
        <span
          class="ant-select-selection-wrap"
        >
          <span
            class="ant-select-selection-search"
          >
            <input
              aria-activedescendant="rc_select_TEST_OR_SSR_list_-1"
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="ant-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              type="search"
              value="test"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-dev-only-do-not-override-mncuj7 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div>
        <div
          id="rc_select_TEST_OR_SSR_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-selected="false"
            id="rc_select_TEST_OR_SSR_list_0"
            role="option"
          >
            Result 1
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden; overflow-anchor: none;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    <span>
                      Result 1
                       
                      <em>
                        Extra 1
                      </em>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    <span>
                      Result 2
                       
                      <em>
                        Extra 2
                      </em>
                    </span>
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
